# my-wordclouds

./: .gitignore  README.md  my_wordclouds.py  prodapp.txt  pyproject.toml
my_wordclouds/: cli.py  my_wordclouds.py
