[tool.poetry]
name = "my-workclouds"
version = "0.1.0"
description = ""
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wordcloud = "^1.9.2"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
