[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
description = ""
name = "my-wordclouds"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.7"
matplotlib = "^3.8.0"
python = "^3.11"
wordcloud = "^1.9.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.6.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
my-wordclouds = "my_wordclouds.cli:cli"
